# harness-ghcopilot

./: .gitignore  REQUIREMENTS.md  copilot-instructions.md
agents/: context7.agent.md  critic.agent.md  documenter.agent.md  implementer.agent.md  inspector.agent.md  investigator.agent.md  maestro.agent.md  planner.agent.md  release.agent.md  reviewer.agent.md  scout.agent.md  tester.agent.md
hooks/: maestro-routing.json  quality.json
instructions/: python.instructions.md  typescript.instructions.md
langgraph-harness/: README.md  __init__.py  pyproject.toml  requirements.txt
langgraph-harness/callbacks/: __init__.py  pipeline_logger.py  retro_collector.py
langgraph-harness/graph/: __init__.py  builder.py  state.py  supervisor.py
langgraph-harness/nodes/: __init__.py  base.py  context7_node.py  critic_node.py  documenter_node.py  implementer_node.py  investigator_node.py  maestro_node.py  planner_node.py  release_node.py  reviewer_node.py  scout_node.py  tester_node.py
langgraph-harness/prompts/: __init__.py  loader.py
langgraph-harness/tests/: test_builder.py  test_classifier.py  test_guards.py  test_guards_loader.py  test_loaders.py  test_state.py  test_testgate.py
langgraph-harness/tools/: file_guard.py  guards_loader.py  mcp_client.py  model_guard.py  safety_guard.py
logs/: retrospective-draft.json  retrospective-history.md
mcp-server/: package-lock.json  package.json  tsconfig.json
meta/: agent-contracts.json  guards.json  pipelines.json
prompts/: document-feature.prompt.md  generate-tests.prompt.md  harness-checklist.prompt.md  (+2 more)
(+88 files in other folders)
